<resources>
    <string name="app_name">RobotTest</string>
    <string name="button_report">Report</string>
    <string name="button_right">Right</string>
    <string name="button_left">Left</string>
    <string name="button_move">Move</string>

    <string name="hint_y">Y</string>
    <string name="hint_x">X</string>
    <string name="button_place">Place</string>

    <string name="menu_custom_commands">Custom Commands</string>
    <string name="custom_command_dialog_title">Choose a custom command</string>
    <string name="edit_custom_command_dialog_title">Click a custom command to edit it</string>
    <string name="command_keyword">Command Keyword</string>
    <string name="text_custom_command_title">Create a custom command:</string>
    <string name="button_add_command">Add Command</string>
    <string name="text_grid_y">Y grid size:</string>
    <string name="text_grid_x">X grid size:</string>
    <string name="text_custom_grid_title">Select a custom grid:</string>
    <string name="button_start">Start</string>

</resources>
