<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/custom_grid_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/text_custom_grid_title"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/custom_grid_title"
        android:padding="8dp">

        <TextView
            android:id="@+id/grid_x_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/grid_x"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/grid_x"
            android:text="@string/text_grid_x"/>

        <EditText
            android:id="@+id/grid_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/grid_x_text"
            android:text="5"/>

        <TextView
            android:id="@+id/grid_y_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/grid_x"
            app:layout_constraintEnd_toStartOf="@+id/grid_y"
            app:layout_constraintBottom_toBottomOf="@+id/grid_y"
            android:text="@string/text_grid_y"/>

        <EditText
            android:id="@+id/grid_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/grid_y_text"
            android:inputType="number"
            android:text="5"/>

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/custom_command_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        app:layout_constraintTop_toBottomOf="@+id/grid_layout"
        android:text="@string/text_custom_command_title"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/command_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/custom_command_title">

        <Button
            android:id="@+id/robot_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/robot_left"
            app:layout_constraintBottom_toTopOf="@+id/command_text_layout"
            android:text="@string/button_move"/>

        <Button
            android:id="@+id/robot_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/robot_move"
            app:layout_constraintEnd_toStartOf="@+id/robot_right"
            app:layout_constraintBottom_toTopOf="@+id/command_text_layout"
            android:text="@string/button_left"/>

        <Button
            android:id="@+id/robot_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/robot_left"
            app:layout_constraintEnd_toStartOf="@+id/robot_report"
            app:layout_constraintBottom_toTopOf="@+id/command_text_layout"
            android:text="@string/button_right"/>

        <Button
            android:id="@+id/robot_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/robot_right"
            app:layout_constraintBottom_toTopOf="@+id/command_text_layout"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/button_report"/>

        <ScrollView
            android:id="@+id/command_text_layout"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/robot_report"
            android:background="@color/grayBackground"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/command_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </ScrollView>

        <EditText
            android:id="@+id/command_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/command_text_layout"
            android:hint="@string/command_keyword"/>

        <ImageView
            android:id="@+id/command_delete"
            style="@style/Base.Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/command_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/command_add"
            android:src="@drawable/ic_backspace_white"/>

        <Button
            android:id="@+id/command_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/command_name"
            app:layout_constraintStart_toEndOf="@+id/command_delete"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/button_add_command"/>

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/start_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/command_layout"
        android:text="@string/button_start"/>

</android.support.constraint.ConstraintLayout>